improve keyboard interaction

--- a/app/src/main/res/layout/dialog_book_read_progress_content.xml
+++ b/app/src/main/res/layout/dialog_book_read_progress_content.xml
@@ -88,6 +88,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/percentage"
             style="@style/TIE.Number"
+            android:imeOptions="actionDone"
             android:maxLength="3"
             tools:text="56"
             />
@@ -123,16 +124,10 @@
         tools:visibility="visible"
         >
 
-        <!-- Setting imeOption="actionNext" is in fact confusing
-             as the user (i.e. myself!) won't see a difference between being on
-             this field or on the 'total-pages' field other than the ime label.
-             Normally the hint (from the TextInputLayout) will show what field we're in,
-             but this won't show when there is a value... which there ALWAYS
-             will be in the 'total-pages'.
-             -->
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/current_page"
             style="@style/TIE.Number"
+            android:imeOptions="actionNext"
             tools:text="123"
             />
 
@@ -156,6 +151,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/total_pages"
             style="@style/TIE.Number"
+            android:imeOptions="actionDone"
             tools:text="176"
             />
 
