--- a/app/src/main/res/layout/toolbar_menu_button_clear.xml
+++ b/app/src/main/res/layout/toolbar_menu_button_clear.xml
@@ -18,7 +18,8 @@
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
   -->
-<Button
+
+<com.google.android.material.button.MaterialButton
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
