--- a/app/src/main/res/layout/toolbar_menu_button_save.xml
+++ b/app/src/main/res/layout/toolbar_menu_button_save.xml
@@ -19,7 +19,7 @@
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<Button
+<com.google.android.material.button.MaterialButton
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
