--- a/app/src/main/res/layout/toolbar_menu_button_add.xml
+++ b/app/src/main/res/layout/toolbar_menu_button_add.xml
@@ -23,7 +23,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/btn_add"
+    android:id="@+id/toolbar_btn_add"
     style="@style/Toolbar.Button"
     android:contentDescription="@string/action_add"
     app:icon="@drawable/add_24px"
