refactor the Toolbar style to get hopefully a good matching background/text/icon colorset in all circumstances.

--- a/app/src/main/res/values/styles-widgets.xml
+++ b/app/src/main/res/values/styles-widgets.xml
@@ -120,6 +120,13 @@
 
     <!-- *************************************************************************************** -->
 
+    <style name="ThemeOverlay.App.Toolbar"
+           parent="ThemeOverlay.Material3.Toolbar.Surface">
+        <!-- Force the icons to be visible... as by default Android seems to
+             give them such a [bleeping] bad contrast you can barely see them. -->
+        <item name="colorControlNormal">?attr/colorOnSurface</item>
+    </style>
+
     <style name="ThemeOverlay.App.TabLayout"
            parent="">
         <!-- selected -->
