--- a/app/src/main/res/values-sw800dp/dimens.xml
+++ b/app/src/main/res/values-sw800dp/dimens.xml
@@ -34,6 +34,8 @@
 
     <dimen name="toolbar_button_start_margin">8dp</dimen>
 
+    <dimen name="popup_menu_divider_width">540dp</dimen>
+
     <item name="context_menu_button_scale"
           format="float"
           type="dimen">0.85
