--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -81,10 +81,16 @@
     <dimen name="progress_padding">4dp</dimen>
 
 
-    <!-- ExtMenuPopupWindow: the indentation for a dropdown -->
+    <!-- ExtMenuPopupWindow:
+         The indentation for a dropdown -->
     <dimen name="popup_menu_x_offset">48dp</dimen>
-    <!-- ExtMenuPopupWindow: the elevation was taken from the android materials options menu layout -->
+    <!-- ExtMenuPopupWindow:
+         The elevation was taken from the android materials options menu layout -->
     <dimen name="popup_menu_elevation">8dp</dimen>
+    <!-- MenuItemListAdapter:
+         The width of the divider line. Must be a fixed length as "match_parent"
+         is not working for an unknown reason. -->
+    <dimen name="popup_menu_divider_width">320dp</dimen>
 
     <!-- Custom menus, e.g. list of radio buttons in a dialog: drawable padding. -->
     <dimen name="popup_menu_drawable_padding">20dp</dimen>
