--- a/app/src/main/res/layout/dialog_edit_book_publisher_list.xml
+++ b/app/src/main/res/layout/dialog_edit_book_publisher_list.xml
@@ -33,10 +33,7 @@
         app:elevation="0dp"
         >
 
-        <!--
-            We only do a "quick-add" as the Publisher has no other fields aside of the name.
-            app:menu="@menu/toolbar_action_add2"
-        -->
+        <!-- uses a 'back' icon because saving is always/automatically done -->
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
             style="@style/Toolbar.Dialog.Fullscreen"
